--- a/app/views/modals/_report_issue.html.haml
+++ b/app/views/modals/_report_issue.html.haml
@@ -31,4 +31,4 @@
                 %label.radio
                   = f.radio_button :issue_type, t
                   = TaskIssue::ISSUE_TYPE_CONTENT[t] 
-              = f.submit "Submit", class: "button button-actionable", style: "float:right; margin-bottom:10px;"
+              = f.submit "Submit", class: "submit_button", style: "margin-bottom:10px;"
