--- a/app/views/modals/headlines/_welcome.html.haml
+++ b/app/views/modals/headlines/_welcome.html.haml
@@ -61,7 +61,7 @@
           = f.text_field :name, value: nil, placeholder: "Name"
           = f.text_field :email, value: nil, placeholder: "E-Mail"
           = f.password_field :password, value: nil, placeholder: "Password", style: "float: left; margin-left: 10px;"
-          = f.submit "Submit", class: "submit_button_alt", style: "display: block; margin-right: 10px; width: inherit;"
+          = f.submit "Submit", class: "submit_button_green", style: "display: block; margin-right: 10px; width: inherit;"
           .clear_floats
   .exit{ style: "float: right; margin-top: 20px;" }
     %a.continue_to_launchpad Continue to Launchpad »
