--- a/app/views/pages/profile.html.haml
+++ b/app/views/pages/profile.html.haml
@@ -42,7 +42,7 @@
             = f.text_field :name, value: nil, placeholder: "Name"
             = f.text_field :email, style: "margin-left: 10px; margin-right: 10px;", value: nil, placeholder: "E-Mail"
             = f.password_field :password, value: nil, placeholder: "Password", style: "margin-right: 10px;"
-            = f.submit "Submit", class: "submit_button_alt"
+            = f.submit "Submit", class: "submit_button_green", style: "width: inherit;"
             
   #topsection
     #updatespace
@@ -54,7 +54,7 @@
               = link_to "Edit Profile", edit_user_path(@user.username), class: "submit_button"
             - elsif current_user
               #following_box
-                = link_to "Following", follow_user_path(@user.username), id: "unfollow_button", class: "submit_button_alt", remote: true, style: ("display:none" unless current_user.following?(@user))
+                = link_to "Following", follow_user_path(@user.username), id: "unfollow_button", class: "submit_button_green", remote: true, style: ("display:none" unless current_user.following?(@user))
                 = link_to "Follow", follow_user_path(@user.username), id: "follow_button", class: "submit_button", remote: true, style: ("display:none;" if current_user.following?(@user))
             .clear_floats
             .social_stats
@@ -213,7 +213,7 @@
                   = image_tag enrollment.path.picture, style: "width: 40px; height: 40px;"
                 What I can do...
               - if @user == current_user
-                = link_to "Continue Challenge", challenge_path(enrollment.path.permalink, c: true, type: Task::CREATIVE), class: "button-small button submit_button_alt", style: "float: right; top: 2px; right: -3px; position: relative; text-shadow: none;"
+                = link_to "Continue Challenge", challenge_path(enrollment.path.permalink, c: true, type: Task::CREATIVE), class: "button-small button submit_button_green", style: "float: right; top: 2px; right: -3px; position: relative; text-shadow: none;"
               %h4 #{enrollment_details[:creative].posts.size} Creative Responses
               %div.profilecontent
                 = render "newsfeed/feed", feed: enrollment_details[:creative]
@@ -225,7 +225,7 @@
                   = image_tag enrollment.path.picture, style: "width: 40px; height: 40px;"
                 What I have done...
               - if false and @user == current_user
-                = link_to "Add new Task", challenge_path(enrollment.path.permalink, c: true, type: Task::CHECKIN), class: "button button-small submit_button_alt", style: "float: right; top: 2px; right: -3px; position: relative;"
+                = link_to "Add new Task", challenge_path(enrollment.path.permalink, c: true, type: Task::CHECKIN), class: "button button-small submit_button_green", style: "float: right; top: 2px; right: -3px; position: relative;"
               %h4 #{enrollment_details[:tasks].posts.size} Tasks Completed
               %div.profilecontent
                 = render "newsfeed/feed", feed: enrollment_details[:tasks]
@@ -268,24 +268,24 @@
   $("#following_box").on("mouseenter", function() {
     var $unfollow_button = $(this).find("#unfollow_button");
     $unfollow_button.addClass("submit_button");
-    $unfollow_button.removeClass("submit_button_alt");
+    $unfollow_button.removeClass("submit_button_green");
     $unfollow_button.text("Unfollow");
   }).on("mouseleave", function() {
     var $unfollow_button = $(this).find("#unfollow_button");
     $unfollow_button.removeClass("submit_button");
-    $unfollow_button.addClass("submit_button_alt");
+    $unfollow_button.addClass("submit_button_green");
     $unfollow_button.text("Following");
   });
   
   $("#modal_following_box").on("mouseenter", function() {
     var $modal_unfollow_button = $(this).find("#modal_unfollow_button");
     $modal_unfollow_button.addClass("submit_button");
-    $modal_unfollow_button.removeClass("submit_button_alt");
+    $modal_unfollow_button.removeClass("submit_button_green");
     $modal_unfollow_button.text("Unfollow");
   }).on("mouseleave", function() {
     var $modal_unfollow_button = $(this).find("#modal_unfollow_button");
     $modal_unfollow_button.removeClass("submit_button");
-    $modal_unfollow_button.addClass("submit_button_alt");
+    $modal_unfollow_button.addClass("submit_button_green");
     $modal_unfollow_button.text("Following");
   });
   
