--- a/app/views/newsfeed/_feed.html.haml
+++ b/app/views/newsfeed/_feed.html.haml
@@ -65,4 +65,4 @@
     :javascript
       $(".view_more").unbind("ajax:success").on("ajax:success", function(xhr, data){ $(this).parent().replaceWith(data); });
     %div.post{ style: "text-align: center; margin: auto;" }
-      = link_to "View More", "#{feed.url}", class: "button button-standard view_more", style: "text-align: center; margin: auto;", remote: true
+      = link_to "View More", "#{feed.url}", class: "submit_button_standard view_more", style: "text-align: center; margin: auto; float: none;", remote: true
