--- a/app/views/sections/next_finish.html.haml
+++ b/app/views/sections/next_finish.html.haml
@@ -26,6 +26,6 @@
           = link_to "Back to Challenge page", challenge_path(@section.path.permalink, c: true, p: @section.points_earned(current_user), s:false), style: "float: left;"
       - else
         %div{ style: "margin: 20px 0 0 0;"}
-          = link_to "Start next round", continue_path_path(@section.path.permalink), class: "button button-actionable", style: "float: right;"
-          = link_to "Continue later", challenge_path(@section.path.permalink, c: true, p: @section.points_earned(current_user)), class: "button button-standard", style: "float: left;"
+          = link_to "Start next round", continue_path_path(@section.path.permalink), class: "submit_button", style: "float: right;"
+          = link_to "Continue later", challenge_path(@section.path.permalink, c: true, p: @section.points_earned(current_user)), class: "submit_button_blue", style: "float: left;"
         
