--- a/app/views/sections/register0.html.haml
+++ b/app/views/sections/register0.html.haml
@@ -24,7 +24,7 @@
           %p Yes. It's as simple as changing a setting on your profile.          
         .signup{ style: ""}
           - if current_user.guest_user?
-            = link_to "No thanks, I'll just play MetaBright as a game.", finish_section_path(@section, @session_id, s: 9), style: "display: inline-block; margin-right: 40px; margin-bottom: 0; font-size: 13px;", class: "landingbuttontext button button-info"
+            = link_to "No thanks, I'll just play MetaBright as a game.", finish_section_path(@section, @session_id, s: 9), style: "margin-right: 40px;", class: "landingbuttontext submit_button_blue_big"
           - else
-            = link_to "No thanks, I'll just play MetaBright as a game.", finish_section_path(@section, @session_id, s: 3), style: "display: inline-block; margin-right: 40px; margin-bottom: 0; font-size: 13px;", class: "landingbuttontext button button-info"
-          = link_to "Try it out!", finish_section_path(@section, @session_id, s: 1), style: "display: inline-block; font-size: 18px; line-height: 36px;", class: "landingbuttontext button button-actionable"
+            = link_to "No thanks, I'll just play MetaBright as a game.", finish_section_path(@section, @session_id, s: 3), style: "margin-right: 40px;", class: "landingbuttontext submit_button_blue_big"
+          = link_to "Try it out!", finish_section_path(@section, @session_id, s: 1), style: "display: inline-block; font-size: 18px; line-height: 36px;", class: "landingbuttontext submit_button_big"
