--- a/app/views/users/notifications.html.haml
+++ b/app/views/users/notifications.html.haml
@@ -36,5 +36,5 @@
       %hr
       %div.control-group
         %div.controls
-        = f.submit "Save", class: "button button-actionable", style: "float: right; margin-left: 10px; margin-right: 20px;"
-        = link_to "Cancel", profile_path(@user.username), class: "button button-standard", style: "float: right;"
+        = f.submit "Save", class: "submit_button", style: "margin-left: 10px; margin-right: 20px;"
+        = link_to "Cancel", profile_path(@user.username), class: "submit_button_standard"
