--- a/app/views/paths/edit.html.haml
+++ b/app/views/paths/edit.html.haml
@@ -98,7 +98,7 @@
         %h1.editable{ style: "margin:0px;", title: "Click to edit" }= @path.name
       - if @path.group_id
         .floatr
-          .controls
+          .controls{ style: "position: relative; top: 87px;"}
             %div{ "data-tip" => "Back" }
               = link_to new_group_evaluation_path(@group) do
                 = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/back.png", class: "gear medium"
