--- a/app/views/personas/_show.html.haml
+++ b/app/views/personas/_show.html.haml
@@ -25,7 +25,7 @@
           <strong>#{@persona.name}:</strong> Choose your Challenge...
       .clear_floats
     %div{ style: "display: inline-block;" }
-      = image_tag ICON_LOADING, alt: "Loading...", style: "width: 20px; height: 20px; float: none; margin: 0;", class: "page_loading"
+      = image_tag ICON_LOADING_URL, alt: "Loading...", style: "width: 20px; height: 20px; float: none; margin: 0;", class: "page_loading"
     %div
       %img{ src: LIGHT_BULB_URL, style: "width:15px; height:15px; margin:4px 4px 0 0; position:relative; top:1px;", alt: "Tip" }
       %p{ style: "font-size: 14px; line-height: 28px; display:inline;" } Challenges represent skillsets where you can prove what you know, and be inspired by others. 
