--- a/app/assets/stylesheets/revolution.css.scss
+++ b/app/assets/stylesheets/revolution.css.scss
@@ -6,7 +6,6 @@ pre { word-break: normal; }
 //button, input { font-family: 'MuliLight', 'Helvetica', 'Arial'; }
 .profile_dropdown li { min-width: 130px; }
 .profile_dropdown li:hover { color: white; }
-.navbar{ z-index:1010; }
 .container.body { padding-top: 51px; }
 .sexy_buttons {
   float: right;
@@ -150,7 +149,9 @@ code.content { border: none; color: #404040; display: block; padding: 10px; font
     top:5px; 
     margin-left:5px; 
     width: 74%;
-    .progress { height:10px; }
+    .progress { 
+      height:10px; 
+    }
   }
 }
 
@@ -199,16 +200,29 @@ code.content { border: none; color: #404040; display: block; padding: 10px; font
 .row .span5{margin-left:20px;}
 .row .span11{margin-left:12px;}
 #content { padding-top: 42px; min-height: 450px;}
-.navuser { margin-top: 4px; }
-.navuser>div>a>.caret{ border-top-width: 5px; border-right-width: 5px; border-left-width: 5px; margin-left:1px;}
-.navuser>div>a{ text-decoration:none; display: block;float: none;padding: 10px 10px;line-height: 19px;}
 .landingbuttontext{color:white; font-size:13px; display:inline-block; position:relative; left:5px; font-family:'MuliLight', 'Helvetica', 'Arial'; font-weight: bold;}
 
 /*Navbar */
 
 .navbar {
-  a { color: #BFBFBF; text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25); }
+  z-index:1010; 
   
+  .navbar-inner, .navbar .fill {
+    border: 0;
+    background: #f1f1f1;
+    box-shadow: none;
+  }
+  
+  
+  a { color: #404040;  }
+  .progress {
+    background-color: #BDBDBD;
+    background-image: -moz-linear-gradient(top, whitesmoke, #BDBDBD);
+    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(whitesmoke), to(#BDBDBD));
+    background-image: -webkit-linear-gradient(top, whitesmoke, #BDBDBD);
+    background-image: -o-linear-gradient(top, whitesmoke, #BDBDBD);
+    background-image: linear-gradient(to bottom, whitesmoke, #BDBDBD);
+  }
   .nav {
     li{
       a {
@@ -220,11 +234,12 @@ code.content { border: none; color: #404040; display: block; padding: 10px; font
       opacity: 0.9;
       &:hover { opacity: 1;}
       span {
-        color: white;
-        text-shadow: 0 -1px 1px rgba(0,0,0,.75); 
+        color: #404040;
+        text-shadow: none; 
         margin-left: 7px;
-        font-size: 14px;
+        font-size: 16px;
         top: 3px;
+        font-family: 'MuliRegular';
         position: relative;
       }
     }
@@ -237,14 +252,32 @@ code.content { border: none; color: #404040; display: block; padding: 10px; font
       text-align: center;
       font-size: 15px;
       
-      span { color: #333; text-shadow: 0 0px 1px rgba(0, 0, 0, 0.5); }
+    }
+    .login_link { cursor: pointer; }
+    .register_link { 
+      cursor: pointer; 
+      background: #DFDFDF;
+      &:hover {background: #cfcfcf; position: inherit;}
+    }
+    .navuser { 
+      margin-top: 2px; 
+      div{
+        a { text-decoration:none; display: block;float: none;padding: 10px 10px;line-height: 19px;}
+        .caret { border-top-width: 5px; border-right-width: 5px; border-left-width: 5px; margin-left:1px; }
+      }
     }
     .pull-right {
       a {
+        font-family: 'MuliRegular';
         &:hover {
-          color: white;
-          .caret { border-top-color:white; border-bottom-color:white; color:white; }
+          opacity: 1;
+          .caret { }
         }
+      }
+      span { 
+        font-family: 'MuliRegular';
+        opacity: .8;
+        &:hover {opacity: 1;}
       }
       li {
         .employers_link {
@@ -255,11 +288,18 @@ code.content { border: none; color: #404040; display: block; padding: 10px; font
           &:hover { text-decoration: underline; }
         }
       }
+      .dropdown-toggle{
+        img { 
+          opacity: 0.8;
+          &:hover {opacity: 1;}
+          &:focus {opacity: 1;}
+        }
+      }
       .caret {
-        border-top-color: #c7ced6; 
-        border-bottom-color: #c7ced6; 
-        color: #c7ced6; 
-        margin-top:7px; 
+        border-top-color: #666; 
+        border-bottom-color: #666; 
+        color: #666; 
+        margin-top: 6px; 
       }
       .leftboxfooter {
         a {
@@ -268,25 +308,30 @@ code.content { border: none; color: #404040; display: block; padding: 10px; font
       }
     }
   }
-}
-
-.nav.landing-nav {
-  border: 0;
-  li.navitem {
-    text-align: center;
-    height: 100%;
+  .navicons{
+    img { height:24px; margin-top:3px; }
+  }
+  .landing-nav {
     border: 0;
-    a {
-      opacity: 1; 
-      padding: 6px 0;
-      width: 100px;
+    li.navitem {
+      text-align: center;
+      height: 100%;
+      border: 0;
+      a {
+        opacity: 1; 
+        padding: 6px 0;
+        width: 100px;
     
-      span {
-        margin: 0; font-size: 15px
+        span {
+          margin: 0;
+        }
       }
     }
   }
 }
+
+
+
 
 
 /* Profile/Revolution */
@@ -492,9 +537,6 @@ code.content { border: none; color: #404040; display: block; padding: 10px; font
 .modal_close, .help_close img{ width:20px; height: inherit;}
 .help_close { margin: 4px 0 0 0; }
 
-.login_link { cursor: pointer; }
-.register_link { cursor: pointer; }
-
 body{background-image: url('https://s3.amazonaws.com/moonlite-nsdub/static/easterislandsketch70pct.jpg');background-repeat:no-repeat;background-attachment:fixed;background-size:100% 100%;font-family: 'MuliLight', 'Helvetica', 'Arial', sans-serif; line-height:18px; font-size:13px;}
 .quizcontainer{
   overflow:hidden; 
@@ -545,9 +587,6 @@ body{background-image: url('https://s3.amazonaws.com/moonlite-nsdub/static/easte
 .completioncontent ul{margin-left:43px; margin-top:3px;}
 .completioncontent li {line-height:25px;}
 
-.pull-right>.dropdown-toggle>img{opacity:.9;}
-.pull-right>.dropdown-toggle:hover img{opacity:1;}
-.pull-right>.dropdown-toggle:focus img{opacity:1;}
 .notifications_bubble{opacity:1; background-color: #F56C7E;height: 16px;width: 16px;background: #F56C7E url(https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/notification_bubble_background.png) no-repeat center center scroll;position: absolute;right: 0px;top: 7px;color: white;text-shadow: 1px 1px 0 rgba(0, 0, 0, .2);text-align: center;font-size: 9px;line-height: 17px;box-shadow: inset 0 0 0 1px rgba(0, 0, 0, .17), 0 1px 1px rgba(0, 0, 0, .2);-moz-box-shadow: inset 0 0 0 1px rgba(0, 0, 0, .17), 0 1px 1px rgba(0, 0, 0, .2);-webkit-box-shadow: inset 0 0 0 1px rgba(0, 0, 0, .17), 0 1px 1px rgba(0, 0, 0, .2);border-radius: 13px;cursor: pointer;display: inline;}
 .notifications_header{ border-bottom: 1px solid rgba(0, 0, 0, 0.2); }
 .notification_space { padding: 12px 12px 0px 12px; }
@@ -561,7 +600,7 @@ body{background-image: url('https://s3.amazonaws.com/moonlite-nsdub/static/easte
 .outter-nub { border-width: 0 11px 12px 11px;
 position: absolute;
 border-style: solid;
-border-color: transparent transparent rgba(0, 0, 0, 0.2) transparent;
+border-color: transparent transparent rgba(188, 188, 188, 0.63) transparent;
 top: -13px;
 left: 60px; }
 .inner-nub { border-width: 0 10px 10px 10px;
@@ -668,7 +707,7 @@ th {
 }
 
 /* About/Revolution */
-.aboutcontainer{margin-top:84px; margin-bottom:10px; overflow:hidden; width:695px;margin-left:auto;margin-right:auto;border-radius:6px;border: 1px solid rgba(0, 0, 0, .1);background: rgba(255, 255, 255, .8); }
+.aboutcontainer{margin-top:99px; margin-bottom:10px; overflow:hidden; width:695px;margin-left:auto;margin-right:auto;border-radius:6px;border: 1px solid rgba(0, 0, 0, .1);background: rgba(255, 255, 255, .8); }
 .aboutbox{background-color:white; margin:12px; border-radius:10px;border:1px solid rgba(0, 0, 0, .1);overflow:hidden; padding:20px 20px 5px 20px;}
 .aboutheader span{font-size:50px; position:relative; bottom:42px;}
 .aboutheader img{height:115px; vertical-align:baseline;}
