background and nav mods

--- a/app/assets/stylesheets/variables.css.scss
+++ b/app/assets/stylesheets/variables.css.scss
@@ -18,3 +18,5 @@ $click_it_tri_size: 60px;
 
 // Variable for custom eval landing pages
 $opacity_level: rgba(255, 255, 255, 0.7);
+
+$solid_employer_bg_color: #fdfdfd;
