--- a/app/views/sections/register2.html.haml
+++ b/app/views/sections/register2.html.haml
@@ -1,4 +1,5 @@
 :css
+  body.employer{ background-image: url("https://s3.amazonaws.com/moonlite-nsdub/static/Backgrounds/gplaypattern.png"); background-repeat: repeat; background-size: auto; }
   .body.container { border: 0px; background-color: transparent; box-shadow: none; }
   .quizcontainer { width: 650px; margin-top: 95px;}
 :javascript
