--- a/app/assets/stylesheets/employer.css.scss
+++ b/app/assets/stylesheets/employer.css.scss
@@ -1,6 +1,7 @@
 @import "variables.css.scss";
 
-body.employer { background-image: url("https://s3.amazonaws.com/moonlite-nsdub/static/Backgrounds/gplaypattern.png"); background-repeat: repeat; background-size: auto; }
+body.employer {background-color: $solid_employer_bg_color; background-image: none;}
+//body.employer { background-image: $employer_bg_pattern; background-repeat: repeat; background-size: auto; }
 body.employer .container.body { width: inherit; background-color: transparent; padding: 0px; }
 .employer-container { width: 980px; border: 1px solid rgba(0, 0, 0, 0.1); border-radius: 0px; margin: 40px auto 0 auto; background-color: rgba(36, 72, 109, 0.8); height: 100%; padding-top:1px;}
 .documentation { padding: 10px 20px; }
