--- a/app/views/pages/portal.html.haml
+++ b/app/views/pages/portal.html.haml
@@ -1,5 +1,5 @@
 :css
-  body{ background-image: url("https://s3.amazonaws.com/moonlite-nsdub/static/Backgrounds/gplaypattern.png"); background-repeat: repeat; background-size: auto; }
+  body{ background: $solid_employer_bg_color; background-image: none;}
 
 #employer.employer-container{ style: "margin-top: 65px; width: 550px;" }
   #organization_portal.aboutbox
