--- a/app/views/sections/finish.html.haml
+++ b/app/views/sections/finish.html.haml
@@ -1,4 +1,5 @@
-:css
+:css 
+  body.employer{ background-image: url("https://s3.amazonaws.com/moonlite-nsdub/static/Backgrounds/gplaypattern.png"); background-repeat: repeat; background-size: auto; }
   .body.container { border: 0px; background-color: transparent; box-shadow: none; }
   .quizcontainer { width: 650px; }
   
@@ -96,6 +97,6 @@
           = link_to "Continue", finish_section_path(@section, @session_id, s: 0), class: "submit_button", style: "float: none;"
       - else
         %div{ style: "margin: 15px 0 0 0;"}
-          = link_to "Start next round", continue_path_path(@section.path.permalink), class: "button button-actionable", style: "float: right;"
-          = link_to "Continue later", challenge_path(@section.path.permalink, c: true, p: @section.points_earned(current_user)), class: "button button-standard", style: "float: left;"
+          = link_to "Start next round", continue_path_path(@section.path.permalink), class: "submit_button"
+          = link_to "Continue later", challenge_path(@section.path.permalink, c: true, p: @section.points_earned(current_user)), class: "submit_button_standard", style: "float: left;"
 
