--- a/app/views/tasks/_take_text.html.haml
+++ b/app/views/tasks/_take_text.html.haml
@@ -1,3 +1,6 @@
+:css
+  body.employer{ background-image: url("https://s3.amazonaws.com/moonlite-nsdub/static/Backgrounds/gplaypattern.png"); background-repeat: repeat; background-size: auto; }
+
 %div.CRquestionandresponsespace
   -if @completed_task.session_id 
     %div.CRquestionspace
