bunch of style changes and eval user fixes

--- a/app/assets/stylesheets/employer.css.scss
+++ b/app/assets/stylesheets/employer.css.scss
@@ -122,6 +122,9 @@ body.employer .container.body { width: inherit; background-color: transparent; p
 }
 
 .custom_challenges {
+  width: 914px; 
+  margin: 0 auto;
+  
   .inlinedisplay {
     list-style-type: none; 
     position:relative; 
