--- a/app/views/groups/account.html.haml
+++ b/app/views/groups/account.html.haml
@@ -20,7 +20,7 @@
     setInterval("compare_and_search();", 300);
   });
 
-.employer-container
+.employer-container{ style: "width: 1040px;"}
   .employer-box
     .header
       = image_tag GIANT_STONEY, style:"display:inline; height:61px;", alt: "Stoney"
