--- a/app/views/pages/evaluator.html.haml
+++ b/app/views/pages/evaluator.html.haml
@@ -202,7 +202,7 @@
                   Why does MetaBright look so playful? 
               #collapseFive.accordion-body.collapse 
                 .accordion-inner 
-                  We’ve found that people are more likely to stay engaged with a Challenge when incentives are in place to make the process feel like a game.  
+                  We’ve found that people are more likely to stay engaged with a Challenge when incentives are in place to make the testing process feel like a game.  
                   This means we can evaluate your candidates with a higher degree of confidence and we can deliver more examples of their abilities! 
         .click-it.jagged_top{ style: "padding-bottom: 58px; margin-bottom: -11px;"}
           .holder
