--- a/app/views/pages/promo_pricing.html.haml
+++ b/app/views/pages/promo_pricing.html.haml
@@ -15,21 +15,10 @@
             %p No risk. No obligation. If at any point during your first 14 days you don't think the Evaluator is right for your company, just cancel your subscription. Your credit card won't ever be charged. 
           %div   
             %ul.pricing_table 
-              %li.price_block 
-                %h3 1 Trial Admin 
-                .price 
-                  .price_figure 
-                    %span.price_number FREE
-                    %span.price_tenure  
-                %ul.features 
-                  %li 3 Evaluations
-                  %li Unlimited Challenges 
-                  %li Unlimited Candidates 
-                  %li{ style: "padding: 25px 15px;" } Limited Email Support
-                .price_footer 
-                  = link_to "Start Free Trial", trial_groups_path, class: "action_button" 
               %li.price_block
                 %h3 1 Admin
+                .old_price
+                  %span Normally $19.99/mo.
                 .price 
                   .price_figure 
                     %span.price_number $19.99 
@@ -45,6 +34,8 @@
                 %h3
                   %div Most Popular
                   2-5 Admins 
+                .old_price
+                  %span Normally $29.99/mo.
                 .price 
                   .price_figure 
                     %span.price_number $29.99 
@@ -58,6 +49,8 @@
                   = link_to "Start Free Trial", new_group_path(p: Group::TWO_TO_FIVE_PLAN), class: "action_button" 
               %li.price_block 
                 %h3 6-15 Admins 
+                .old_price
+                  %span Normally $49.99/mo.
                 .price 
                   .price_figure 
                     %span.price_number $49.99 
@@ -69,9 +62,24 @@
                   %li Premium Phone and Email Support
                 .price_footer
                   = link_to "Start Free Trial", new_group_path(p: Group::SIX_TO_FIFTEEN_PLAN), class: "action_button", descriptor: "six_to_fifteen" 
-            %div.sales_help_inline{ style: "margin-top: -30px; "} 
-              %p{ style: "margin: -30px 0 12px; float: right;"} 
-                Have more than 15 admins?  
+              %li.price_block 
+                %h3 16-50 Admins
+                .old_price
+                  %span Normally $89.99/mo. 
+                .price 
+                  .price_figure 
+                    %span.price_number $89.99 
+                    %span.price_tenure per month 
+                %ul.features 
+                  %li Unlimited Evaluations
+                  %li Unlimited Challenges 
+                  %li Unlimited Candidates  
+                  %li Premium Phone and Email Support
+                .price_footer
+                  = link_to "Start Free Trial", new_group_path(p: Group::SIX_TO_FIFTEEN_PLAN), class: "action_button", descriptor: "sixteen_to_fifty"
+            %div.sales_help_inline
+              %p{ style: "margin: 0px 0 12px; float: right;"} 
+                Need more than 50 admins?  
                 %a{ onclick: "$('.sales_help_modal').modal({keyboard: true, show: true})" }Contact us for pricing. 
         .clear_floats
         .area.pitch_tiles{ style: "margin-top: 5px;"}
