--- a/app/views/paths/new_group.haml
+++ b/app/views/paths/new_group.haml
@@ -50,4 +50,4 @@
 
     
       %div.row{ style: "margin-bottom: 30px; margin-right:auto; margin-left:auto; " }
-        %button.button.button-actionable{ form: "new_path", style: "margin-top: 15px;" } Create My Challenge
+        %button.submit_button{ form: "new_path", style: "float: none; margin-top: 15px;" } Create My Challenge
