--- a/app/assets/stylesheets/revolution.css.scss
+++ b/app/assets/stylesheets/revolution.css.scss
@@ -61,7 +61,8 @@ pre { word-break: normal; }
 .submit_button_standard {
   @extend .sexy_buttons;
   background-color: #DAE1E4;
-  color: #333;
+  color: #333 !important;
+  text-shadow: none !important;
   &:hover{ color: #333; }
 }
 .clear_floats { clear: both;}
@@ -1436,9 +1437,12 @@ th {
       .features {
         background: lighten($landing_green, 30%);
       }
+      .old_price {
+        background: $landing_green;
+        color: #3E5D3D;
+      }
       .price {
         background: $landing_green;
-      
       }
       .price_footer { 
          height: 50px;
@@ -1463,6 +1467,18 @@ th {
     &:hover .price{ box-shadow: inset 0 0 45px 1px #DB7224; background-color: #e9b15b;}
     &:hover h3{ background: #222; }
     &:hover .action_button{ background-color: #e9685b;  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);}
+  }
+  .old_price {
+    display: table;
+    font-size: 14px;
+    background: #444;
+    border-bottom: 1px solid white;
+    color: rgb(177, 177, 177);
+    width: 100%;
+    text-shadow: 0px 1px 0px rgba(255,255,255,.3), 0px -1px 0px rgba(0,0,0,.7);
+    height: 30px;
+    vertical-align: middle;
+    padding: 7px 0 0px;
   }
   .price {
     display: table;
