--- a/app/views/groups/challenges.html.haml
+++ b/app/views/groups/challenges.html.haml
@@ -20,7 +20,7 @@
     setInterval("compare_and_search();", 300);
   });
 
-.employer-container
+.employer-container{ style: "width: 1040px;" }
   .employer-box
     .header{ style: "margin-bottom: 15px;"}
       = image_tag GIANT_STONEY, style:"display:inline; height:61px;", alt: "Stoney"
