--- a/app/views/tasks/_form.html.haml
+++ b/app/views/tasks/_form.html.haml
@@ -6,7 +6,7 @@
 = form_for(task, remote: true, html: { "data-type" => "html", class: "form-horizontal question_creator #{'new-task-form' if new_task}"}) do |f|
   = f.hidden_field :section_id
   %div.floatr
-    %button#save_question_button.button.button-standard.button-small= submit_label
+    %button#save_question_button.submit_button_standard.button.button-small= submit_label
     - unless new_task
       %button.button.button-standard.button-small{ type: "button", onclick: "$(this).parents('td').find('div.question_display').show(); $(this).parents('.question_creator').remove();" } Close
   %div.task_form
