--- a/app/views/pages/airs_landing.html.haml
+++ b/app/views/pages/airs_landing.html.haml
@@ -12,7 +12,7 @@
           Welcome Students of AIRS Training Courses
         %h2
           Special Offer: 15% Off your Evaluator Subscription
-        = link_to "Sign Up Now", "#", class:"submit_button_huge", style: "float: none; display: inline-block; margin-top: 8px;"
+        = link_to "Sign Up Now", promo_pricing_path, class:"submit_button_huge", style: "float: none; display: inline-block; margin-top: 20px;"
     %article#art_1
       #happy_users.row-fluid
         .testimonial
@@ -125,7 +125,7 @@
             %span Guaranteed
             to improve your quality of hire and decrease your time to fill. Sign up and begin testing your candidates in 60 seconds!
           .big_submit_button{ style: "text-align: right;"}
-            = link_to "SIGN UP NOW!", trial_groups_path, class: "submit_button", descriptor: "signup-link"
+            = link_to "SIGN UP NOW!", promo_pricing_path, class: "submit_button", descriptor: "signup-link"
     %article#art_5
       .area.pitch_tiles{ style: "margin-top:0; "} 
         .make_room_sides
@@ -219,4 +219,4 @@
             %span Guaranteed
             to improve your quality of hire and decrease your time to fill. Sign up and begin testing your candidates in 60 seconds!
           .big_submit_button
-            = link_to "SIGN UP NOW!", trial_groups_path, class: "submit_button", descriptor: "signup-link"
+            = link_to "SIGN UP NOW!", promo_pricing_path, class: "submit_button", descriptor: "signup-link"
